# axum-notes

./: 404.html  Cargo.toml  README.md  SUMMARY.md  book.toml  index.html  print.html  searchindex.js  searchindex.json
.github/workflows/: gh-pages.yml
basic/offloading_computation/: README.md
notes/: README.md  index.html
notes/auth/: index.html
notes/auth/with_tower_http/: Cargo.toml  README.md  index.html
notes/auth/with_tower_http/src/: main.rs
notes/basic/: README.md  index.html
notes/basic/offloading_computation/: Cargo.toml  README.md  index.html
notes/basic/offloading_computation/src/: main.rs
notes/db/: index.html
notes/db/with_sqlx/: Cargo.toml  README.md  index.html
notes/db/with_sqlx/src/: main.rs
notes/db/with_sqlx_tx/: Cargo.toml  README.md  index.html
notes/db/with_sqlx_tx/src/: main.rs
notes/misc/: index.html
notes/misc/serve_static_from_binary/: Cargo.toml  README.md  index.html
notes/misc/serve_static_from_binary/src/: main.rs
notes/templating/: index.html
notes/templating/with_askama/: Cargo.toml  README.md  index.html
notes/templating/with_askama/src/: main.rs
notes/templating/with_askama/templates/: index.html
