[package]
name = "with_sqlx_tx"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.4" }
axum-sqlx-tx = { version = "0", features = ["sqlite"] }
serde = "1"
serde_json = "1"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
tokio = { version = "1", features = ["full"] }
